openshift/prometheus-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus-openfaas
  namespace: openfaas
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
